--- a/assets/css/partials/notification.scss
+++ b/assets/css/partials/notification.scss
@@ -10,7 +10,7 @@
   margin-left: 20px;
   opacity: 0;
   visibility: hidden;
-  transition: .5s;
+  transition: 0.5s;
   color: var(--grey-7);
 
   &.show {
@@ -21,7 +21,7 @@
   h1 {
     padding: 12px 0;
   }
-  
+
   p {
     padding: 8px 0;
   }
@@ -40,7 +40,7 @@
     padding: 4px 12px;
     font-family: $font-basic;
     border: none;
-    transition: .3s;
+    transition: 0.3s;
 
     &:hover {
       background: var(--red-1);
