--- a/assets/css/tag-roulette.scss
+++ b/assets/css/tag-roulette.scss
@@ -27,7 +27,9 @@
   padding: 10px 20px;
   border-radius: 8px;
   background-color: var(--red-5);
-  transition: filter 0.3s ease, opacity 0.3s ease;
+  transition:
+    filter 0.3s ease,
+    opacity 0.3s ease;
 }
 
 .roll-tags span.blur {
