--- a/assets/css/iconfont.scss
+++ b/assets/css/iconfont.scss
@@ -175,13 +175,21 @@ $icon-url: "//at.alicdn.com/t/c/font_#{$icon_font}.woff2";
   }
 }
 
-@if index($social-keys, "facebook") or index($share-keys, "facebook") or $triangle-badge-icon == "facebook" {
+@if index($social-keys, "facebook") or
+  index($share-keys, "facebook") or
+  $triangle-badge-icon ==
+  "facebook"
+{
   .icon-facebook:before {
     content: "\e60e";
   }
 }
 
-@if index($social-keys, "twitter") or index($share-keys, "twitter") or $triangle-badge-icon == "twitter" {
+@if index($social-keys, "twitter") or
+  index($share-keys, "twitter") or
+  $triangle-badge-icon ==
+  "twitter"
+{
   .icon-twitter:before {
     content: "\e62a";
   }
@@ -193,7 +201,11 @@ $icon-url: "//at.alicdn.com/t/c/font_#{$icon_font}.woff2";
   }
 }
 
-@if index($social-keys, "linkedin") or index($share-keys, "linkedin") or $triangle-badge-icon == "linkedin" {
+@if index($social-keys, "linkedin") or
+  index($share-keys, "linkedin") or
+  $triangle-badge-icon ==
+  "linkedin"
+{
   .icon-linkedin:before {
     content: "\e614";
   }
@@ -241,7 +253,11 @@ $icon-url: "//at.alicdn.com/t/c/font_#{$icon_font}.woff2";
   }
 }
 
-@if index($social-keys, "weibo") or index($share-keys, "weibo") or $triangle-badge-icon == "weibo" {
+@if index($social-keys, "weibo") or
+  index($share-keys, "weibo") or
+  $triangle-badge-icon ==
+  "weibo"
+{
   .icon-weibo:before {
     content: "\e62c";
   }
@@ -253,7 +269,11 @@ $icon-url: "//at.alicdn.com/t/c/font_#{$icon_font}.woff2";
   }
 }
 
-@if index($social-keys, "reddit") or index($share-keys, "reddit") or $triangle-badge-icon == "reddit" {
+@if index($social-keys, "reddit") or
+  index($share-keys, "reddit") or
+  $triangle-badge-icon ==
+  "reddit"
+{
   .icon-reddit:before {
     content: "\e61c";
   }
@@ -277,7 +297,10 @@ $icon-url: "//at.alicdn.com/t/c/font_#{$icon_font}.woff2";
   }
 }
 
-@if index($social-keys, "stackoverflow") or $triangle-badge-icon == "stackoverflow" {
+@if index($social-keys, "stackoverflow") or
+  $triangle-badge-icon ==
+  "stackoverflow"
+{
   .icon-stackoverflow:before {
     content: "\e620";
   }
