--- a/assets/css/partials/aplayer.scss
+++ b/assets/css/partials/aplayer.scss
@@ -93,6 +93,8 @@ body .aplayer .aplayer-info .aplayer-controller .aplayer-volume-wrap,
   cursor: var(--cursor-pointer) !important;
 }
 
-.aplayer-author, .aplayer-lrc p, .aplayer-list-author {
+.aplayer-author,
+.aplayer-lrc p,
+.aplayer-list-author {
   color: var(--grey-7) !important;
 }
