--- a/assets/css/partials/highlight.scss
+++ b/assets/css/partials/highlight.scss
@@ -309,10 +309,11 @@
   }
 }
 
-#copy-tooltip, #lang-tooltip {
+#copy-tooltip,
+#lang-tooltip {
   pointer-events: none;
   opacity: 0;
-  transition: all 0.2s ease; 
+  transition: all 0.2s ease;
   position: fixed;
   top: 50%;
   left: 50%;
