--- a/assets/css/partials/aplayer.scss
+++ b/assets/css/partials/aplayer.scss
@@ -4,6 +4,7 @@
   background: var(--color-wrap) !important;
   transition: all 0.3s;
   font-family: $font-basic !important;
+  box-shadow: none !important;
 
   button,
   .aplayer-icon {
@@ -12,6 +13,10 @@
         fill: var(--color-link) !important;
       }
     }
+  }
+
+  &:hover {
+    box-shadow: var(--shadow-card-hover) !important;
   }
 
   .aplayer-after-sidebar &,
