style: add media query for responsive padding in archive styles

--- a/assets/css/partials/archive.scss
+++ b/assets/css/partials/archive.scss
@@ -10,6 +10,10 @@
   &:hover .archive-year-wrap:after {
     width: 3em;
   }
+
+  @media #{$mg-normal} {
+    padding: 20px 16px;
+  }
 }
 
 .archive-year-wrap {
@@ -110,6 +114,10 @@
 
   a {
     text-decoration: none;
+  }
+
+  @media #{$mg-normal} {
+    padding: 10px 16px;
   }
 }
 
