feat: add tabs feature with styling and functionality

--- a/assets/css/partials/article.scss
+++ b/assets/css/partials/article.scss
@@ -158,7 +158,8 @@
       .post-link-card a,
       .friend-item-wrap a,
       :has(code),
-      a.article-gallery-item
+      a.article-gallery-item,
+      .nav-tabs a
     ),
   .code-figcaption-bottom.has-link a {
     &::after {
