fix: update image src attributes to use relURL for better path handling

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,7 +20,7 @@
                 {{- $cover := partial "helpers/randomCover.html" $ctx -}}
                 {{- if $cover -}}
                   <img
-                    data-src="{{ $cover }}"
+                    data-src="{{ $cover | relURL }}"
                     data-sizes="auto"
                     alt="{{ $v.categories }}"
                     class="lazyload"
